welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:8: error: ';' expected but 'return' found.
		} return false
                  ^arrayFront9:16: error: ';' expected but 'return' found.
		} return false
                  ^